// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Student Mutation should register courses for a student 1`] = `
Object {
  "data": Object {
    "registerCourse": Object {
      "courses": Array [
        Object {
          "id": "5fdab398791e134a5466566f",
          "name": "Aerospace Engineerng",
        },
        Object {
          "id": "5fdab4b5eed1fb397feaca14",
          "name": "Fashion Technology",
        },
        Object {
          "id": "5fdab4bd78cc9321b31faf35",
          "name": "Marine Engineerng",
        },
        Object {
          "id": "5fdab4c4fe1aa062abc46096",
          "name": "Building, Contruction Management",
        },
        Object {
          "id": "5fdab4ccba6dcf525408412a",
          "name": "Agriculture",
        },
      ],
      "id": "5fda72349baf026a892dc1a0",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Student Mutation should throw an error if student course registration failed 1`] = `
Object {
  "data": Object {
    "registerCourse": null,
  },
  "errors": Array [
    [GraphQLError: Something went wrong: Error: Courses could not be added],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Student Mutation should throw an error if student course removal failed 1`] = `
Object {
  "data": Object {
    "unregisterCourse": null,
  },
  "errors": Array [
    [GraphQLError: Something went wrong: Error: Courses could not be removed],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Student Mutation should throw an error if student to be registered does not exist 1`] = `
Object {
  "data": Object {
    "registerCourse": null,
  },
  "errors": Array [
    [GraphQLError: Something went wrong: Error: Student not found],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Student Mutation should unregister courses for a student 1`] = `
Object {
  "data": Object {
    "unregisterCourse": Object {
      "courses": Array [
        Object {
          "id": "5fdab398791e134a5466566f",
          "name": "Aerospace Engineerng",
        },
        Object {
          "id": "5fdab4b5eed1fb397feaca14",
          "name": "Fashion Technology",
        },
        Object {
          "id": "5fdab4bd78cc9321b31faf35",
          "name": "Marine Engineerng",
        },
        Object {
          "id": "5fdab4c4fe1aa062abc46096",
          "name": "Building, Contruction Management",
        },
        Object {
          "id": "5fdab4ccba6dcf525408412a",
          "name": "Agriculture",
        },
      ],
      "id": "5fda72349baf026a892dc1a0",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
